fix scanner's close